# todo_in_cli_using_surrealdb

./: Cargo.toml  README.md  TodoList.json
.cargo/: config.toml
db/: mydatabase-11-Aug-2024.surql  mydatabase-2024-08-02.surql
db/mydatabase.db/: 000031.sst  000034.sst  IDENTITY  MANIFEST-000036
src/: lib.rs  main.rs  todos.rs
src/todos/: todo.rs  todo_list.rs
