[package]
name = "todo_in_cli_using_surrealdb"
version = "0.1.0"
edition = "2021"

[dependencies]
easy-sgr-macros = "0.1.0"

serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.118"
surrealdb = "1.5.4"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.14"
