[package]
name = "todo_in_cli_using_surrealdb"
version = "0.1.0"
edition = "2021"

[dependencies]
easy-sgr-macros = "0.1.0"

serde = { version = "1.0.104", features = ["derive"], optional = false }
serde_json = { version = "1.0.118", optional = false }
surrealdb = { version = "1.5.4", optional = false }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"], optional = false }
toml = { version = "0.8.14", optional = true }
